--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
-FROM nginx
-ADD nginx.conf /etc/nginx/conf.d/default.conf
-# ADD docker-entrypoint.sh /docker-entrypoint.sh
-COPY dist /usr/share/nginx/html
-# CMD ["sh","/docker-entrypoint.sh"]
+FROM nginx:alpine
+
+COPY  /dist/ /usr/share/nginx/html/
+COPY  /docker/nginx.conf  /etc/nginx/conf.d/
+
+EXPOSE 80
