--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,14 @@
 server {
     listen       80;
     server_name  localhost;
-    client_max_body_size 100M;
-
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
-        # try_files $uri $uri/ /index.html;
     }
 
-    # location /admin {
-    #     alias   /usr/share/nginx/html;
-    #     index  index.html index.htm;
-    #     try_files $uri $uri/stream /index.html;
-    # }
-
-    # location /api/ {
-    #     proxy_connect_timeout 3000;
-    #     proxy_send_timeout 3000;
-    #     proxy_read_timeout 3000;
-    #     send_timeout 3000;
-    #     proxy_pass http://gaea-gateway:8110/;
-    # }
-
+    error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   html;
     }
 }
