--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -13,7 +13,7 @@ jobs:
           uses: actions/cache@v1
           with:
             path: ./node_modules
-            key: supermall
+            key: supermall-repository
         - name: Install 🔧
           run: |
             npm install
