--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,14 +1,38 @@
 server {
-    listen       80;
-    server_name  localhost;
-
+    listen 80;
+    listen [::]:80;
+    # gzip config
+    gzip on;
+    gzip_min_length 1k;
+    gzip_comp_level 9;
+    gzip_types text/plain text/css text/javascript application/json application/javascript application/x-javascript application/xml;
+    gzip_vary on;
+    gzip_disable "MSIE [1-6]\.";
+    resolver $NAMESERVERS ipv6=off;
+    root /usr/share/nginx/html;
+    include /etc/nginx/mime.types;
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        index  index.html;
     }
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   html;
+    location ^~/jetlinks/ { 
+        if ($request_uri ~* ^/jetlinks/(.*)$) {
+            proxy_pass http://host.docker.internal:8840/$1;
+        }
+        #proxy_pass http://host.docker.internal:8840/;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host:$server_port;
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_connect_timeout   1;
+        proxy_buffering off;
+        chunked_transfer_encoding off;
+        proxy_cache off;
+        proxy_send_timeout      30m;
+        proxy_read_timeout      30m;
+        client_max_body_size    500m;
     }
 }
